advance-cluster-security/vulnerability-management/ISG-Demo/sp2-network-baseline/k8s/netpol/sp2-api-server-netpol.yaml
---
# Allow ingress to api-server only from frontend on port 9001
# Egress: only to database on 5432 + DNS
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: api-server-netpol
  namespace: sp2-netpol-demo
  labels:
    demo: acs-sp2
spec:
  podSelector:
    matchLabels:
      app: api-server
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - ports:
    - port: 9001
      protocol: TCP
    from:
    - podSelector:
        matchLabels:
          app: frontend
  egress:
  - ports:
    - port: 5432
      protocol: TCP
    to:
    - podSelector:
        matchLabels:
          app: database
  - ports:
    - port: 53
      protocol: UDP
    - port: 53
      protocol: TCP
