advance-cluster-security/vulnerability-management/ISG-Demo/sp2-network-baseline/k8s/netpol/sp2-database-netpol.yaml
---
# Allow ingress to database only from api-server on port 5432
# No egress required (database only receives connections)
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: database-netpol
  namespace: sp2-netpol-demo
  labels:
    demo: acs-sp2
spec:
  podSelector:
    matchLabels:
      app: database
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - ports:
    - port: 5432
      protocol: TCP
    from:
    - podSelector:
        matchLabels:
          app: api-server
  egress:
  - ports:
    - port: 53
      protocol: UDP
    - port: 53
      protocol: TCP
